duniverse/core_kernel/iobuf/test/test_iobuf_perm.mlt
open Core

let () = Iobuf.Poke.char (Iobuf.read_only (Iobuf.create ~len:1)) 'c'

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type (read, 'a) Iobuf.t_with_shallow_sexp
       but an expression was expected of type
         (read_write, 'b) Iobuf.t_with_shallow_sexp
       Type read = [ `Read ] is not compatible with type
         read_write = [ `Read | `Who_can_write of Perms.me ]
       The first variant type does not allow tag(s) `Who_can_write
|}]

(* Some basic subtyping judgements. *)

type rw = (read_write, Iobuf.seek) Iobuf.t
type ro = (read, Iobuf.seek) Iobuf.t
type sk = (read_write, Iobuf.seek) Iobuf.t
type ns = (read_write, Iobuf.no_seek) Iobuf.t

let check_subtyping x = (x : rw :> ro)
let check_subtyping x = (x : sk :> ns)

[%%expect {|
|}]

(* This only works if the 'seek parameter is covariant. *)

type t =
  { message : (read_write, Iobuf.no_seek) Iobuf.t
  ; writable : (read_write, Iobuf.seek) Iobuf.t
  }

let t =
  let buf = Iobuf.create ~len:1 in
  { message = buf; writable = buf }
;;

[%%expect {|
|}]

(* Operations have the right permissions. *)

let unseekable : (read_write, Iobuf.no_seek) Iobuf.t = Iobuf.create ~len:16
let seekable : (read_write, Iobuf.seek) Iobuf.t = Iobuf.create ~len:16

(* all of these are fine *)

let () = Iobuf.advance seekable 1
let (_ : char) = Iobuf.Consume.char seekable
let () = Iobuf.Fill.char seekable 'a'
let () = Iobuf.resize seekable ~len:0

[%%expect {|
|}]

let () = Iobuf.advance unseekable 1

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type
         (read_write, Iobuf.no_seek) Iobuf.t_with_shallow_sexp
       but an expression was expected of type
         (read_write, Iobuf.seek) Iobuf.t_with_shallow_sexp
       Type Iobuf.no_seek is not compatible with type Iobuf.seek
|}]

let () = Iobuf.resize unseekable ~len:0

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type
         (read_write, Iobuf.no_seek) Iobuf.t_with_shallow_sexp
       but an expression was expected of type
         (read_write, Iobuf.seek) Iobuf.t_with_shallow_sexp
       Type Iobuf.no_seek is not compatible with type Iobuf.seek
|}]

let () = Iobuf.Fill.char unseekable 'a'

[%%expect
  {|
Line _, characters _-_:
Error: This expression has type
         (read_write, Iobuf.no_seek) Iobuf.t_with_shallow_sexp
       but an expression was expected of type
         (read_write, Iobuf.seek) Iobuf.t_with_shallow_sexp
       Type Iobuf.no_seek is not compatible with type Iobuf.seek
|}]
